fixing popup / button overlap, keeping popup height on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -187,7 +187,7 @@ div#__next>div {
   align-items: center;
   top: 70px;
   left: 6px;
-  z-index: 999;
+  z-index: 998;
   background-color: #f0f0f0b3;
   backdrop-filter: blur(3px);
   border: 2px solid #e5e5e5;
@@ -214,7 +214,7 @@ div#__next>div {
   position: absolute;
   top: 112px;
   left: 6px;
-  z-index: 999;
+  z-index: 998;
   display: flex;
   align-items: center;
   background-color: #fff;
